# SkillsControl

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
api/: skills-reputation.ts
docs/: analisis-autoskills.md  fix-discover-catalogo-real.md  hallazgos-i18n-backend.md  implementacion-catalogo-i18n-release-2026-07-19.md  plan-instalacion-recomendaciones.md  plan-pm-ux-ciclo-de-vida-skills.md  plan-proyectos-y-autoskills.md  plan-v1-lanzamiento.md  prompt-auto-skills-mvp.md
scripts/: check-locales.mjs
src/: App.tsx  console.css  i18n.ts  main.tsx  project-local.css  projects.css  styles.css
src-tauri/: Cargo.toml  detection-map.json  pack-list.json  skill-list.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: detection.rs  lib.rs  main.rs  pack_list.rs  skill_list.rs
src/components/: ChangeModal.tsx  Discover.test.ts  Discover.tsx  Health.tsx  Inspector.tsx  Overview.tsx  ProcessConsole.tsx  ProjectDetail.tsx  Projects.tsx  SkillMap.tsx  layout.tsx  shared.tsx
src/lib/: demo-data.ts  desktop.ts  skill-utils.test.ts  skill-utils.ts  types.ts
src/locales/de/: translation.json
src/locales/en/: translation.json
src/locales/es/: translation.json
src/locales/fr/: translation.json
src/locales/ja/: translation.json
src/locales/pt/: translation.json
src/locales/zh/: translation.json
