[package]
name = "skill-control"
version = "0.1.0"
description = "Local control center for Agent Skills"
authors = ["Skill Control"]
edition = "2021"

[lib]
name = "skill_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
