[package]
name = "skillsdock"
version = "0.1.0"
description = "Local-first control center for agent skills"
authors = ["SkillsDock"]
edition = "2021"

[lib]
name = "skillsdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
sha2 = "0.10"
