[package]
name = "skill-control"
version = "0.1.0"
description = "Local control center for Agent Skills"
authors = ["Skill Control"]
edition = "2021"

[lib]
name = "skill_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
